test/tests/ClosureFieldNoSelf.frost
def s := "Hello"

method main() {
    Console.printLine(s)
    method a() {
        Console.printLine(s)
        method b() {
            Console.printLine(s)
            method c() {
                Console.printLine(s)
            }
        }
    }
}